MOSIP-8289 updated pom and as per java 11